bin_PROGRAMS = server
server_SOURCES = ./mMain.cpp \
./mServer.cpp \
./mGame.cpp \
./slots_vabank/mGameSlotsFruit.cpp \
./slots_vabank/mGameSlots5line.cpp \
./table/mGameRoulette.cpp \
./cards/mGameCardsPaiGowPoker.cpp \
./cards/mGameCardsCaribbeanPoker.cpp \
./cards/mGameCardsReddog.cpp \
./cards/mGameCardsBlackjack.cpp \
./cards/mGameCardsOasisPoker.cpp \
./cards/mGameCardsLetItRide.cpp \
./cards/mGameCardsCasinoWar.cpp \
./cards/mGameCards.cpp \
./cards/mGameCardsBaccarat.cpp \
./mUser.cpp \
./other/mGameKeno.cpp \
./mCommon.cpp \
./mMoney.cpp \
./videopoker/mGameVideopokerJokerpoker.cpp \
./videopoker/mGameVideopokerTenorbetter.cpp \
./mCash.cpp

INCLUDES = -I. -I./slots_vabank -I./table -I./cards -I./videopoker -I./other